--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <div id="app">Please wait...</div>
 <script>
   window.$docsify = {
+    loadNavbar: true,
+    coverpage:true,
+    name: 'Cyber Docs',
+    notFoundPage: true,
     loadSidebar: true,
     subMaxLevel: 3,
     search: 'auto', // default
@@ -49,6 +53,7 @@
 <script src="https://unpkg.com/docsify@4.11.6/lib/plugins/search.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
 </body>
 </html>
 
